添加提取函数的代码

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </div>
       <form id="extends-form"></form>
     </main>
-    <script src="./js/if-else.js"></script>
+    <!-- <script src="./js/if-else.js"></script> -->
+    <script src="./js/extract-function.js"></script>
   </body>
 </html>
