--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <form id="extends-form"></form>
     </main>
     <!-- <script src="./js/if-else.js"></script> -->
-    <script src="./js/extract-function.js"></script>
+    <!-- <script src="./js/extract-function.js"></script> -->
+    <script src="./js/finite-state-machine.js"></script>
   </body>
 </html>
