实现无限状态机

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </main>
     <!-- <script src="./js/if-else.js"></script> -->
     <!-- <script src="./js/extract-function.js"></script> -->
-    <script src="./js/finite-state-machine.js"></script>
+    <!-- <script src="./js/finite-state-machine.js"></script> -->
+    <script src="./js/Infinite-state-machine.js"></script>
   </body>
 </html>
